# damn-vulnerable-web-server

./: .gitignore  CMakeLists.txt  README.md  authentication.c  authentication.h  base64.c  base64.h  error_handling.c  error_handling.h  main.c  mime_type_handler.c  mime_type_handler.h  request_logger.c  request_logger.h
serve/: index.html
